# pitchscrape

./: pyproject.toml
pitchscrape/events/whoscored/: fetch.py
