[tool.poetry]
name = "pitchscrape"
version = "0.1.0"
description = ""
authors = ["Chaitanya Gvs <chaitanyagvs23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.26.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
tqdm = "^4.67.0"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
